refactor: change moment to dayjs

--- a/packages/core/database/package.json
+++ b/packages/core/database/package.json
@@ -15,7 +15,7 @@
     "flat": "^5.0.2",
     "glob": "^7.1.6",
     "mathjs": "^10.6.1",
-    "moment": "2.x",
+    "dayjs": "^1.11.8",
     "semver": "^7.3.7",
     "sequelize": "^6.26.0",
     "umzug": "^3.1.1"
