--- a/packages/core/utils/package.json
+++ b/packages/core/utils/package.json
@@ -15,7 +15,8 @@
   "peerDependencies": {
     "dayjs": "1.x",
     "rc-input-number": "7.x",
-    "@rc-component/mini-decimal": "^1.0.1"
+    "@rc-component/mini-decimal": "^1.0.1",
+    "antd": "5.x"
   },
   "gitHead": "ce588eefb0bfc50f7d5bbee575e0b5e843bf6644"
 }
