--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "pretty-format": "^24.0.0",
     "pretty-quick": "^3.1.0",
     "vite": "^4.3.9",
-    "vitest": "^0.32.0"
+    "vitest": "^0.32.0",
+    "typescript": "5.1.3"
   },
   "volta": {
     "node": "18.14.2",
