--- a/packages/plugins/mobile-client/package.json
+++ b/packages/plugins/mobile-client/package.json
@@ -19,7 +19,7 @@
     "classnames": "^2.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
     "antd": "^5.6.1",
     "antd-style": "^3.3.0"
   },
